--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "api": "node --env-file .env.local server.mjs",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node --env-file .env.local server.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
