--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "api": "node --env-file .env.local server.mjs",
+    "api": "node server.mjs",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node --env-file .env.local server.mjs"
+    "start": "node server.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.555.0",
     "react": "^19.2.0"
