Refactor authService to handle API errors and requests

--- a/.env.example
+++ b/.env.example
@@ -2,8 +2,13 @@
 GEMINI_API_KEY=
 
 # Optional: Evotor integration (menu sync)
+# Token for api.evotor.ru (can be received automatically via POST /api/v1/user/token)
+EVOTOR_CLOUD_TOKEN=
+# Legacy name (still supported)
 EVOTOR_TOKEN=
 STORE_UUID=
+# Optional: verify Evotor webhooks (Authorization: Bearer <token>)
+EVOTOR_WEBHOOK_AUTH_TOKEN=
 
 # Optional: API server port (default 3001)
 # PORT=3001
