Enhance webhook auth with Basic Auth support

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,12 @@ EVOTOR_CLOUD_TOKEN=
 # Legacy name (still supported)
 EVOTOR_TOKEN=
 STORE_UUID=
-# Optional: verify Evotor webhooks (Authorization: Bearer <token>)
+# Optional: verify Evotor webhook call to POST /api/v1/user/token:
+# - Token auth: Authorization: <token> (or Bearer <token>)
 EVOTOR_WEBHOOK_AUTH_TOKEN=
+# - Basic auth: Authorization: Basic base64(login:password)
+EVOTOR_WEBHOOK_BASIC_USER=
+EVOTOR_WEBHOOK_BASIC_PASS=
 
 # Optional: API server port (default 3001)
 # PORT=3001
