Add address zone API with caching and geocoding

--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,23 @@ EVOTOR_WEBHOOK_BASIC_PASS=
 
 # Optional: API server port (default 3001)
 # PORT=3001
+
+# Auth (phone OTP)
+# - SMS_PROVIDER=console prints codes to the API server console (dev-friendly)
+# - SMS_PROVIDER=smsru sends real SMS via sms.ru (requires SMS_RU_API_ID)
+SMS_PROVIDER=console
+# SMS_RU_API_ID=
+# SMS_SENDER=ObediVL
+
+# OTP/session tuning (optional)
+# OTP_TTL_MS=300000
+# OTP_RESEND_COOLDOWN_MS=30000
+# OTP_MAX_ATTEMPTS=5
+# OTP_MAX_REQUESTS_PER_HOUR_PHONE=5
+# OTP_MAX_REQUESTS_PER_HOUR_IP=20
+# SESSION_COOKIE_NAME=obedi_session
+# SESSION_TTL_MS=604800000
+# COOKIE_SECURE=false
+
+# Delivery zone lookup cache (Nominatim + OSRM)
+# DELIVERY_ZONE_CACHE_TTL_MS=86400000
