Add address zone API with caching and geocoding

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,10 @@ EVOTOR_CLOUD_TOKEN=
 # Legacy name (still supported)
 EVOTOR_TOKEN=
 STORE_UUID=
+# Optional: store id for Cloud v2 endpoints (/stores/{storeId}/...)
+EVOTOR_STORE_ID=
+# Optional: where to persist received tokens (default: ./.evotor/tokens.json)
+EVOTOR_TOKEN_STORE_PATH=
 # Optional: verify Evotor webhook call to POST /api/v1/user/token:
 # - Token auth: Authorization: <token> (or Bearer <token>)
 EVOTOR_WEBHOOK_AUTH_TOKEN=
