--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "api": "node server.mjs",
+    "api:py": "python -m uvicorn backend.app.main:app --reload --port 3001",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
