--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "api": "node server.mjs",
-    "api:py": "python -m uvicorn backend.app.main:app --reload --port 3001",
+    "api:py": "poetry -C backend install && poetry -C backend run uvicorn app.main:app --reload --port 3001",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
