--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "api": "node server.mjs",
+    "api": "npm run api:py",
     "api:py": "poetry -C backend install && poetry -C backend run uvicorn app.main:app --reload --port 3001",
+    "api:node": "node server.mjs",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.mjs"
+    "start": "poetry -C backend install && poetry -C backend run uvicorn app.main:app --host 0.0.0.0 --port 3001",
+    "start:node": "node server.mjs"
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
