Refactor app initialization and remove unused code

--- a/.env.example
+++ b/.env.example
@@ -43,7 +43,21 @@ SMS_PROVIDER=console
 # OTP_MAX_REQUESTS_PER_HOUR_IP=20
 # SESSION_COOKIE_NAME=obedi_session
 # SESSION_TTL_MS=604800000
+# SESSION_ROTATE_AFTER_MS=86400000
+# SESSION_SINGLE_ACTIVE=false
+# SESSION_CLEANUP_INTERVAL_MS=300000
 # COOKIE_SECURE=false
+
+# SQLite tuning (optional)
+# SQLITE_JOURNAL_MODE=WAL
+# SQLITE_BUSY_TIMEOUT_MS=5000
+# SQLITE_FOREIGN_KEYS=true
+
+# Proxy / security (optional)
+# TRUST_PROXY_HEADERS=false
+# TRUSTED_PROXY_IPS=127.0.0.1,10.0.0.0/8
+# CSRF_ORIGIN_CHECK=false
+# CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
 
 # Delivery zone lookup cache (Nominatim + OSRM)
 # DELIVERY_ZONE_CACHE_TTL_MS=86400000
