--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "type": "module",
   "scripts": {
     "api": "npm run api:py",
-    "api:py": "poetry -C backend install && poetry -C backend run uvicorn app.main:app --reload --port 3001",
+    "api:py": "poetry -C backend install && poetry -C backend run python -m app.scripts.migrate && poetry -C backend run uvicorn app.main:app --reload --port 3001",
     "api:node": "node server.mjs",
+    "db:migrate": "poetry -C backend install && poetry -C backend run python -m app.scripts.migrate",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "poetry -C backend install && poetry -C backend run uvicorn app.main:app --host 0.0.0.0 --port 3001",
+    "start": "poetry -C backend install && poetry -C backend run python -m app.scripts.migrate && poetry -C backend run uvicorn app.main:app --host 0.0.0.0 --port 3001",
     "start:node": "node server.mjs"
   },
   "dependencies": {
