Refactor app initialization and remove unused code

--- a/.env.example
+++ b/.env.example
@@ -33,7 +33,7 @@ EVOTOR_WEBHOOK_BASIC_PASS=
 
 SMS_PROVIDER=console
 # SMS_RU_API_ID=
-# SMS_SENDER=ObediVL
+# SMS_SENDER= (optional; configure sender name in sms.ru, or leave empty to use default)
 
 # OTP/session tuning (optional)
 # OTP_TTL_MS=300000
