Refactor app initialization and remove unused code

--- a/.env.example
+++ b/.env.example
@@ -58,6 +58,13 @@ SMS_PROVIDER=console
 # TRUSTED_PROXY_IPS=127.0.0.1,10.0.0.0/8
 # CSRF_ORIGIN_CHECK=false
 # CORS_ORIGINS=http://localhost:3000,http://127.0.0.1:3000
+# ALLOWED_HOSTS=obedi-vl.ru,www.obedi-vl.ru,localhost,127.0.0.1
+
+# Abuse protection (optional)
+# AI_MAX_REQUESTS_PER_MINUTE_IP=10
+# AI_MAX_REQUESTS_PER_HOUR_IP=60
+# DELIVERY_MAX_REQUESTS_PER_MINUTE_IP=30
+# DELIVERY_MAX_REQUESTS_PER_HOUR_IP=600
 
 # Delivery zone lookup cache (Nominatim + OSRM)
 # DELIVERY_ZONE_CACHE_TTL_MS=86400000
