Refactor app initialization and remove unused code

--- a/.env.example
+++ b/.env.example
@@ -66,5 +66,12 @@ SMS_PROVIDER=console
 # DELIVERY_MAX_REQUESTS_PER_MINUTE_IP=30
 # DELIVERY_MAX_REQUESTS_PER_HOUR_IP=600
 
-# Delivery zone lookup cache (Nominatim + OSRM)
+# Delivery zone lookup (geocoder + OSRM)
+#
+# NOTE: The public Nominatim instance may block your IP if you exceed its usage policy.
+# For production, use a paid geocoder or your own instance.
+#
+# DELIVERY_GEOCODER_PROVIDER=photon  # photon | nominatim | auto
+# NOMINATIM_BASE_URL=https://nominatim.openstreetmap.org
+# PHOTON_BASE_URL=https://photon.komoot.io
 # DELIVERY_ZONE_CACHE_TTL_MS=86400000
