Refactor app initialization and remove unused code

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,9 @@ EVOTOR_CLOUD_TOKEN=
 # Optional: store id for Cloud v2 endpoints (/stores/{storeId}/...)
 EVOTOR_STORE_ID=
 
+# Optional: store UUID for v1 inventory endpoints (required for `/api/evotor/products` menu sync)
+STORE_UUID=
+
 # Optional: where to persist received tokens (default: ./.evotor/tokens.json)
 EVOTOR_TOKEN_STORE_PATH=
 
